<resources>
    <string name="app_name">Room Finder</string>
    <string name="app_slogan">Ultimate Property Finder</string>
    <string name="book_now">Book Now</string>
    <string name="per_month">per month</string>
    <string name="view_on_google_maps">View on Google Maps</string>
    <string name="facilities">Facilities</string>
    <string name="description">Description</string>
    <string name="email_address">Email Address</string>
    <string name="message">Massage</string>
    <string name="phone">Phone</string>
    <string name="sign_in_to_continue">Sign In to Continue</string>
    <string name="password">Password</string>
    <string name="enter_valid_address">Enter Valid Email Address</string>
    <string name="log_in">Log In</string>
    <string name="password_does_not_match">Password Doesn\'t Match</string>
    <string name="required">Required<sup>*</sup></string>
    <string name="fill_all_required_details">Fill all Required Details</string>
    <string name="reset_password">Reset Password</string>
    <string name="password_less_than_eight">Password is Less than Eight Character</string>
    <string name="or_sign_up_with">or Sign Up with</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="new_member_sign_up_here">New Member?</string>
    <string name="sign_up_here">Sign up Here</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="create_an_account">Create an Account</string>
    <string name="full_name">Full name</string>
    <string name="create_account">Create Account</string>
    <string name="have_an_account_sign_in_here">Have an account?</string>
    <string name="sign_in_here">Sign In Here</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="enter_an_address_or_city">Enter an address or city</string>
    <string name="enter_price_range">Enter price range</string>
    <string name="resident_type">Resident Type</string>
    <string name="search_now">Search Now</string>
    <string name="locations">Locations</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="find_a_property_anywhere">Find a property anywhere.</string>
    <string name="recently_added_properties">Recently Added Properties</string>
    <string name="view_all">View All</string>
    <string name="recent_updates">Recent Updates</string>
    <string name="email_did_t_match">Enter Valid Email!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="using_retrofit">Using Retrofit</string>
    <string name="using_http">Using HTTP</string>
    <string name="push_local_notification">Push Local Notification</string>
    <string name="push_notification">Push Notification</string>
</resources>